--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   });
 });
+
 </script>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Guia Verde do Jovem Empreendedor</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
 <style>
   body {
-    font-family: "Poppins", Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #f8faf9;
-    color: #2f4f2f;
+ font-family: "Inter", sans-serif;
+  margin: 0;
+  padding: 0;
+  background: #f8faf9;
+  color: #2f4f2f;
   }
 
   header {
@@ -128,6 +133,43 @@ document.addEventListener("DOMContentLoaded", () => {
 .option.wrong { background:#ffd6d6; border-color:#ff5c5c; color:#7d1c1c; }
 .score-tracker { margin-bottom: 12px; font-size:14px; font-weight:600; color:#2e8b57; }
 
+  @media (max-width: 768px) {
+    header {
+      padding: 20px 10px;
+    }
+
+    nav {
+      flex-direction: column;
+      align-items: stretch;
+    }
+
+    nav a {
+      text-align: center;
+      border-radius: 6px;
+      margin: 4px 0;
+    }
+
+    section.page {
+      padding: 15px;
+      margin: 15px;
+    }
+
+    .cards-grid {
+      grid-template-columns: 1fr;
+      gap: 15px;
+    }
+
+    .card img {
+      height: 200px;
+    }
+
+    footer div {
+      grid-template-columns: 1fr;
+      text-align: center;
+    }
+  }
+
+
 </style>
 
 <script>
@@ -157,6 +199,7 @@ function openCurio(i){
   document.getElementById('curio-modal').style.display='flex';
 }
 function closeModal(){ document.getElementById('curio-modal').style.display='none'; }
+
 
 const quizQuestions = [
   {
@@ -300,18 +343,30 @@ function showQuestion(){
 }
 
 function selectOption(i){
-  if(answered) return; answered=true;
+  if(answered) return; 
+  answered=true;
+
   const q=quizQuestions[currentQuestion];
   const opts=document.querySelectorAll('#q-options .option');
+  
   opts.forEach((el,idx)=>{
     el.style.pointerEvents='none';
     if(idx===q.answer) el.classList.add('correct');
     if(idx===i && idx!==q.answer) el.classList.add('wrong');
   });
+
   if(i===q.answer) score++;
   updateTracker();
-  if(currentQuestion<quizQuestions.length-1) document.getElementById('next-btn').style.display='inline-block';
-  else document.getElementById('finish-btn').style.display='inline-block';
+
+  
+  setTimeout(()=>{
+    if(currentQuestion < quizQuestions.length-1){
+      currentQuestion++;
+      showQuestion();
+    } else {
+      finishQuiz();
+    }
+  }, 750);
 }
 
 function nextQuestion(){ currentQuestion++; showQuestion(); }
